# vatahack

./: .env.example  .gitignore  Dockerfile.client  Dockerfile.stub  INSTRUCTIONS.md  README.md  bot_main.py  config.py  pyproject.toml  requirements-client.txt  requirements-stub.txt  stub_service.py
agent/: __init__.py  chains.py  embedder.py  server.py  stream_callback.py  summarizer.py  themes_extractor.py
cleaners/: db_cleaner.py
data/: dataset.jsonl
db_functions/: checkpoints.py  db.py
handlers/: commands.py  parser.py
k8s/: client-job.yaml  ollama.yaml  photo-service.yaml  postgres.yaml  redis.yaml  speech-service.yaml  stub-service.yaml
photo_service/: Dockerfile  app.py  requirements.txt
scripts/: client.py
speech_service/: Dockerfile  app.py  requirements.txt
utils/: content_saver.py
