[project]
name = "vatahack"
version = "0.1.0"
description = "pepe shnene wata fuu"
authors = [{ name = "Yakunin Vladimir", email = "YakuninVla@yandex.ru" }]
license = { text = "GPl" }
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = ["faiss-cpu (>=1.13.2,<2.0.0)", "langchain (>=1.2.6,<2.0.0)", "langgraph (>=1.0.6,<2.0.0)", "huggingface-hub (>=1.3.2,<2.0.0)", "bertopic (>=0.17.4,<0.18.0)", "langchain-ollama (>=1.0.1,<2.0.0)", "fastapi (>=0.128.0,<0.129.0)", "pydantic (>=2.12.5,<3.0.0)", "sentence-transformers (>=5.2.0,<6.0.0)", "uvicorn (>=0.40.0,<0.41.0)", "httpx (>=0.28.1,<0.29.0)", "tqdm (>=4.67.1,<5.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
